external-crates/move/move-compiler/tests/move_check/parser/positional_struct_unpack.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
7 │         Foo(_) = x;
  │         ^^^^^^ Positional fields are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E03013]: positional call mismatch
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
7 │         Foo(_) = x;
  │         ^^^^^^ Invalid deconstruction. Named struct field declarations require named deconstruction

error[E04016]: too few arguments
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
7 │         Foo(_) = x;
  │         ^^^^^^ Missing assignment for field 'f' in '0x42::M::Foo'

error[E03010]: unbound field
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
7 │         Foo(_) = x;
  │         ^^^^^^ Unbound field '0' in '0x42::M::Foo'

